--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 body, html {
     font-size: 16px;
+    font-family: Lato, sans-serif;
     line-height: 1.5;
     box-sizing: border-box;
     margin: 0;
+}
+
+h1, h2 {
+    font-family: "Gilroy ExtraBold" ;
 }
 
 h1 {
@@ -58,6 +63,10 @@ li {
     float: right;
 }
 
+#lower-nav a {
+    font-size: 18px;
+}
+
 .main-content h1 {
     margin-top: 0;
     margin-bottom: 1.5rem;
@@ -66,10 +75,12 @@ li {
 
 .main-content p {
     font-size: 26px;
+    font-family: KlinicSlab;
 }
 
 #trial-button {
     font-size: 1.5rem;
+    font-family: "Gilroy ExtraBold";
     padding: 1rem 1.375rem 0.875rem;
     box-shadow: inset 0 -5px 0 -1px #abb833;
     border-radius: 5px;
@@ -112,4 +123,14 @@ img {
 
 #video-link {
     font-size: 18px;
+}
+
+@font-face {
+    font-family: "Gilroy ExtraBold";
+    src: url(./assets/Gilroy-Font/Radomir\ Tinkov\ -\ Gilroy-ExtraBold.otf)
+}
+
+@font-face {
+    font-family: KlinicSlab;
+    src: url(./assets/KlinicSlab_Personal_License/KlinicSlabLightIt.otf)
 }
