--- a/style.css
+++ b/style.css
@@ -6,22 +6,31 @@ body, html {
     margin: 0;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 h1, h2 {
     font-family: "Gilroy ExtraBold" ;
 }
 
 h1 {
     font-size: 4.5rem;
+    color: #25384f;
     width: 40rem;
 }
 
 h2 {
     font-size: 2.5rem;
+    line-height: 3rem;
     margin: 0 0 1.5rem;
+    color: #244564;
 }
 
 p {
     font-size: 18px;
+    color: #454545;
 }
 
 .nav-bars {
@@ -36,7 +45,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     margin: 0;
-    padding: 0 8%;
+    padding: 0 0 0 8%;
 }
 
 ul {
@@ -47,7 +56,7 @@ ul {
 }
 
 li {
-    display: inline;
+    display: inline-block;
     height: 100%;
 }
 
@@ -55,27 +64,73 @@ li {
     background-color: #25384f;
 }
 
+#explore {
+    color: white;
+    font-weight: bold;
+    border-bottom: solid 6px #85C3E9;
+}
+
+.login {
+    background-color: #374F6C;
+}
+
 #free-trial-link {
-    background-color: #CEDD3e;
+    color: #244564;
+    font-weight: bold;
+    border: none;
+}
+
+#upper-nav {
+    color: #85C3E9;
+}
+
+#upper-nav li {
+    /* border-right: solid 0.25px #85C3E9; */
+    height: 100%;
+    padding: 0.625rem 1.375rem;
+}
+
+.fixed-width {
+    padding: 0 1.5rem;
+}
+
+/* #upper-nav span{
+    margin: 0;
+    justify-content: center;
+} */
+
+#lower-nav {
+    display: flexbox;
+    color: #244564;
+    height: 5.125rem;
+    justify-content: space-between;
 }
 
 #lower-nav ul {
+    display: inline-block;
     float: right;
 }
 
 #lower-nav a {
     font-size: 18px;
+    padding: 0 1rem;
 }
 
 .main-content h1 {
     margin-top: 0;
     margin-bottom: 1.5rem;
     line-height: 4.875rem;
+    text-shadow: 0 0 7px #85c3e9,
+                 0 0 7px #85c3e9,
+                 0 0 7px #85c3e9,
+                 0 0 7px #85c3e9,
+                 0 0 7px #85c3e9;
 }
 
 .main-content p {
     font-size: 26px;
     font-family: KlinicSlab;
+    color: #244564;
 }
 
 #trial-button {
@@ -123,6 +178,8 @@ img {
 
 #video-link {
     font-size: 18px;
+    font-weight: bold;
+    color: #4495D7;
 }
 
 @font-face {
