--- a/style.css
+++ b/style.css
@@ -86,6 +86,17 @@ li {
     color: #85C3E9;
 }
 
+#upper-nav li:hover,
+#upper-nav a:hover {
+    color: white;
+}
+
+nav .green:hover,
+#trial-button:hover {
+    background-color: #d5dd81;
+}
+
+
 #upper-nav li {
     /* border-right: solid 0.25px #85C3E9; */
     height: 100%;
@@ -122,6 +133,10 @@ li {
 #lower-nav a {
     font-size: 18px;
     padding: 0 2rem;
+}
+
+#lower-nav li:hover {
+    color: #85C3E9;
 }
 
 .main-content h1 {
