--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body, html {
 a {
     color: inherit;
     text-decoration: none;
+    text-align: center;
 }
 
 h1, h2 {
@@ -58,6 +59,7 @@ ul {
 }
 
 li {
+    text-align: center;
     display: inline-block;
     height: 100%;
 }
@@ -70,6 +72,7 @@ li {
     color: white;
     font-weight: bold;
     border-bottom: solid 6px #85C3E9;
+    padding-bottom: 1.5rem;
 }
 
 .login {
@@ -112,7 +115,8 @@ a#logo {
 }
 
 .fixed-width {
-    padding: 0 1.5rem;
+    padding: 1.7rem 1.5rem;
+    height: 100%;
 }
 
 /* #upper-nav span{
